add purchaseItem methods
